[tool.poetry]
name = "django_useful_utils"
version = "0.0.0"
description = ""
authors = ["winspain <penndicardo@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry-dynamic-versioning]
enable = true
#vcs = "git"
format = "v{base}+{timestamp}"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"


